--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,14 +3,17 @@
     <item android:id="@+id/action_search"
         android:title="@string/BotMenu_search"
         android:icon="@android:drawable/ic_menu_search"
+        android:iconTint="@color/colorAccent"
         />
     <item android:id="@+id/action_work"
         android:title="@string/BotMenu_work"
         android:icon="@android:drawable/ic_menu_today"
+        android:iconTint="@color/colorAccent"
         />
     <item android:id="@+id/action_event"
         android:title="@string/BotMenu_event"
         android:icon="@drawable/ic_store_white_24dp"
+        android:iconTint="@color/colorAccent"
         />
     <item android:id="@+id/action_chat"
         android:title="@string/BotMenu_chat"
@@ -19,5 +22,6 @@
     <item android:id="@+id/action_profile"
         android:title="@string/BotMenu_profile"
         android:icon="@drawable/ic_person_white_24dp"
+        android:iconTint="@color/colorAccent"
         />
 </menu>
