--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/colorBackground"
+        android:background="@color/primaryColor"
+        app:itemTextColor="@color/colorOnPrimary"
+        app:itemIconTint="@color/colorOnPrimary"
         app:menu="@menu/navigation"
 
         />
