--- a/app/src/main/res/layout/activity_term_condition.xml
+++ b/app/src/main/res/layout/activity_term_condition.xml
@@ -12,7 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/Terms_Conditions"
-        android:textSize="32sp"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
+        android:textColor="@color/primaryDarkColor"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,11 +32,27 @@
         android:layout_marginBottom="8dp"
         android:scrollbars="vertical"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/ctnBottomPane"
+        app:layout_constraintBottom_toTopOf="@+id/lbTapContinue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title" />
+
+    <TextView
+        android:id="@+id/lbTapContinue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="@string/Label_TapAgreeAndContinuePolicy"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/ctnBottomPane"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTermCondition"
+        app:layout_constraintWidth_percent="0.75" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ctnBottomPane"
@@ -49,8 +68,9 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:elevation="0dp"
             android:text="@string/Decline"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnAccept"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +80,7 @@
             android:id="@+id/btnAccept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Accept"
+            android:text="@string/AgreeTermsConditions"
             android:textColor="@color/colorOnPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
