--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#60ad5e</color>
-    <color name="colorPrimaryVariant">#3700B3</color>
+
     <color name="colorOnPrimary">#FFFFFF</color>
     <color name="colorSecondary">#03DAC6</color>
     <color name="colorSecondaryVariant">#018786</color>
@@ -15,7 +14,15 @@
     <color name="colorError">#C51162</color>
     <color name="colorOnError">#FFFFFF</color>
 
-    <color name="colorPrimaryDark">#005005</color>
-    <color name="colorAccent">#2e7d32</color>
+    <color name="colorAccent">#00172b</color>
     <color name="black_overlay">#66000000</color>
+
+    <color name="primaryColor">#273d54</color>
+    <color name="primaryLightColor">#526781</color>
+    <color name="primaryDarkColor">#00172b</color>
+    <color name="secondaryColor">#c16883</color>
+    <color name="secondaryLightColor">#f698b2</color>
+    <color name="secondaryDarkColor">#8e3a57</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#273d54</color>
 </resources>
