--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,14 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/primaryColor</item>
         <!--<item name="colorSecondary">@color/colorSecondary</item>-->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/colorAccent</item>
         <!--<item name="colorError">@color/colorError</item>-->
         <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="scrimBackground">@color/mtrl_scrim_color</item>
-
     </style>
 
     <style name="FullscreenTheme" parent="AppTheme">
