--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryDarkColor"
-    tools:context=".Activity.SplashActivity">
+    tools:context=".activity.SplashActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/splash_content"
-        android:textColor="@color/primaryLightColor"
+        android:textColor="@color/primaryColor"
         android:textSize="50sp"
         android:textStyle="bold" />
 
