--- a/app/src/main/res/layout/fragment_verify_otp.xml
+++ b/app/src/main/res/layout/fragment_verify_otp.xml
@@ -10,16 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Activity.VerifyOTPFragment">
+    tools:context=".activity.VerifyOTPFragment">
 
+
+        <TextView
+            android:id="@+id/lbPhoneNumber"
+            tools:text="+65855798"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="72dp"
+            android:textAlignment="center"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/lbVerifyInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:padding="32dp"
-            android:textColor="@color/primaryDarkColor"
+            android:layout_marginTop="16dp"
+            android:padding="8dp"
             android:text="@string/VerifyPhone_Info"
             android:textAlignment="center"
             android:textSize="18sp" />
@@ -28,44 +36,43 @@
             android:id="@+id/lbVerifyAction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:padding="18dp"
+            android:layout_marginTop="16dp"
+            android:padding="16dp"
             android:text="@string/VerifyPhone_Action"
             android:textAlignment="center"
-            android:textColor="@color/primaryDarkColor"
             android:textSize="16sp" />
 
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
+            android:hint="OTP Code"
             app:passwordToggleEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/teOTPCode"
-                    style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
+                    android:maxLength="6"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textAlignment="center"
-                    android:maxLength="6"
                     android:textSize="18sp"
                     android:typeface="normal" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnValidate"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:text="@string/validate"
-            />
+            android:layout_marginTop="24dp"
+            android:text="@string/validate" />
         <TextView
             android:id="@+id/tvFakeOTP"
             android:textSize="16sp"
