--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_view"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +9,7 @@
     tools:context=".activity.ViewProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        style="@style/AppTheme"
+        style="@style/ThemeOverlay.MaterialComponents.ActionBar"
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -17,18 +18,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/primaryColor"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:fitsSystemWindows="true"
             >
-            <!--<com.google.android.material.card.MaterialCardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_centerHorizontal="true"-->
-                <!--android:innerRadius="0dp"-->
-                <!--android:thicknessRatio="1.9"-->
-                <!--app:layout_collapseMode="parallax"-->
-                <!--&gt;-->
-
-            <!--</com.google.android.material.card.MaterialCardView>-->
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?android:attr/actionBarSize"
+                android:theme="@style/ToolbarTheme"
+                app:layout_collapseMode="pin"
+                android:id="@+id/toolBar"
+                app:popupTheme="@style/AppTheme"/>
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
@@ -37,16 +36,9 @@
                 android:id="@+id/imgAvatar"
                 android:src="@drawable/portrait3_4"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.9"
+                app:layout_collapseParallaxMultiplier="1.2"
                 android:layout_gravity="center"
-
                 />
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                android:id="@+id/toolBar"
-                app:popupTheme="@style/AppTheme"/>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.core.widget.NestedScrollView
@@ -55,7 +47,6 @@
         android:scrollbars="none"
         app:behavior_overlapTop="30dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-
         >
 
         <com.google.android.material.card.MaterialCardView
@@ -70,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <com.google.android.material.textfield.TextInputLayout
-                    android:hint="Phone Number"
+                    android:hint="@string/phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <com.google.android.material.textfield.TextInputEditText
@@ -84,9 +75,10 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:baselineAligned="false"
                     android:weightSum="2">
                     <com.google.android.material.textfield.TextInputLayout
-                        android:hint="First Name"
+                        android:hint="@string/first_name"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
