--- a/app/src/main/res/layout/fragment_confirm_phone.xml
+++ b/app/src/main/res/layout/fragment_confirm_phone.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ConfirmPhoneFragment">
+    tools:context=".fragment.ConfirmPhoneFragment">
 
     <TextView
         android:id="@+id/lbConfirmPhoneNo"
