--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.GroupFragment">
+    tools:context=".fragment.GroupFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
