--- a/app/src/main/res/layout/fragment_view_event.xml
+++ b/app/src/main/res/layout/fragment_view_event.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ViewEventFragment">
+    tools:context=".fragment.ViewEventFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
