--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.ViewProfileFragment">
+    tools:context=".fragment.ViewProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         style="@style/ThemeOverlay.MaterialComponents.ActionBar"
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/primaryColor"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="scroll|snapMargins"
             android:fitsSystemWindows="true"
             >
             <androidx.appcompat.widget.Toolbar
@@ -28,17 +28,6 @@
                 app:layout_collapseMode="pin"
                 android:id="@+id/toolBar"
                 app:popupTheme="@style/AppTheme"/>
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:fitsSystemWindows="true"
-                android:id="@+id/imgAvatar"
-                android:src="@drawable/portrait3_4"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="1.2"
-                android:layout_gravity="center"
-                />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.core.widget.NestedScrollView
@@ -50,16 +39,28 @@
         >
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:cardElevation="8dp"
-            app:contentPadding="16dp"
-            >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardElevation="8dp"
+        app:contentPadding="16dp"
+        >
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="match_parent"
+                    android:layout_height="175dp"
+                    android:fitsSystemWindows="true"
+                    android:id="@+id/imgAvatar"
+                    android:src="@drawable/unknown_user"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="1.2"
+                    android:layout_gravity="center"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:hint="@string/phone_number"
                     android:layout_width="match_parent"
@@ -186,7 +187,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </androidx.appcompat.widget.LinearLayoutCompat>
-        </com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
 
 
     </androidx.core.widget.NestedScrollView>
