--- a/app/src/main/res/layout/fragment_confirm_phone.xml
+++ b/app/src/main/res/layout/fragment_confirm_phone.xml
@@ -32,7 +32,7 @@
         app:layout_constraintVertical_bias="0.05"
         app:layout_constraintWidth_percent="0.75" />
     <com.google.android.material.button.MaterialButton
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        style="@style/ButtonOutline"
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
