--- a/app/src/main/res/layout/fragment_view_event.xml
+++ b/app/src/main/res/layout/fragment_view_event.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.ViewEventFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <include layout="@layout/appbar_layout" />
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="30sp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="EventList" />
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="30sp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="EventList" />
 
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
