--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_view"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.ViewProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -50,17 +50,28 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-                <androidx.appcompat.widget.AppCompatImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                <androidx.coordinatorlayout.widget.CoordinatorLayout
                     android:layout_width="match_parent"
-                    android:layout_height="175dp"
-                    android:fitsSystemWindows="true"
-                    android:id="@+id/imgAvatar"
-                    android:src="@drawable/unknown_user"
-                    app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="1.2"
-                    android:layout_gravity="center"
-                    />
+                    android:layout_height="wrap_content">
+                    <androidx.appcompat.widget.AppCompatImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_height="175dp"
+                        android:fitsSystemWindows="true"
+                        android:id="@+id/imgAvatar"
+                        android:src="@drawable/unknown_user"
+                        app:layout_collapseMode="parallax"
+                        app:layout_collapseParallaxMultiplier="1.2"
+                        android:layout_gravity="center"
+                        />
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btnChangeAvatar"
+                        android:layout_gravity="bottom|end"
+                        style="@style/TextButton.Icon"
+                        app:icon="@drawable/ic_baseline_camera_alt_24px"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp" />
+                </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:hint="@string/phone_number"
@@ -180,12 +191,13 @@
                         android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.button.MaterialButton
+                    android:elevation="@dimen/quad"
                     android:id="@+id/btnUpdate"
-                    android:text="@string/update"
+                    android:text="@string/save_change"
                     style="@style/Widget.MaterialComponents.Button"
                     android:layout_marginBottom="48dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.card.MaterialCardView>
