--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorAccent">#03A9F4</color>
+    <color name="colorBackground">#ffffff</color>
     <color name="primaryColor">#2D7CCF</color>
     <color name="primaryDarkColor">#225F92</color>
 
